[package]
name = "hbp_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
httpstatus = "0.1.2"
chrono = { version = "0.4.22", features = ["serde"] }

okapi = { version = "0.7.0-rc.1", optional = true }
rocket_okapi = { version = "0.8.0-rc.2", features = [
  "swagger",
], optional = true }
schemars = { version = "0.8.11", optional = true }

[features]
okapi = ["dep:okapi", "dep:rocket_okapi", "dep:schemars"]
